Cadastrar Curso (em andamento)

--- a/EscolaIdiomas/EscolaIdiomas.csproj
+++ b/EscolaIdiomas/EscolaIdiomas.csproj
@@ -46,17 +46,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FormCadastrarAluno.cs">
+    <Compile Include="FormAluno.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormCadastrarAluno.Designer.cs">
-      <DependentUpon>FormCadastrarAluno.cs</DependentUpon>
+    <Compile Include="FormAluno.Designer.cs">
+      <DependentUpon>FormAluno.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormCadastrarResponsavel.cs">
+    <Compile Include="FormCurso.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormCadastrarResponsavel.Designer.cs">
-      <DependentUpon>FormCadastrarResponsavel.cs</DependentUpon>
+    <Compile Include="FormCurso.Designer.cs">
+      <DependentUpon>FormCurso.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormModulo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormModulo.Designer.cs">
+      <DependentUpon>FormModulo.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormProfessor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormProfessor.Designer.cs">
+      <DependentUpon>FormProfessor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FormResponsavel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormResponsavel.Designer.cs">
+      <DependentUpon>FormResponsavel.cs</DependentUpon>
     </Compile>
     <Compile Include="FormEnviarMensagem.cs">
       <SubType>Form</SubType>
@@ -88,21 +106,30 @@
     <Compile Include="FormInicial.Designer.cs">
       <DependentUpon>FormInicial.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormPesquisarResponsavel.cs">
+    <Compile Include="FormPesquisar.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormPesquisarResponsavel.Designer.cs">
-      <DependentUpon>FormPesquisarResponsavel.cs</DependentUpon>
+    <Compile Include="FormPesquisar.Designer.cs">
+      <DependentUpon>FormPesquisar.cs</DependentUpon>
     </Compile>
     <Compile Include="GerenciadorBanco.cs" />
     <Compile Include="GerenciadorSIEscola.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="FormCadastrarAluno.resx">
-      <DependentUpon>FormCadastrarAluno.cs</DependentUpon>
+    <EmbeddedResource Include="FormAluno.resx">
+      <DependentUpon>FormAluno.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormCadastrarResponsavel.resx">
-      <DependentUpon>FormCadastrarResponsavel.cs</DependentUpon>
+    <EmbeddedResource Include="FormCurso.resx">
+      <DependentUpon>FormCurso.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormModulo.resx">
+      <DependentUpon>FormModulo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormProfessor.resx">
+      <DependentUpon>FormProfessor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormResponsavel.resx">
+      <DependentUpon>FormResponsavel.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormEnviarMensagem.resx">
       <DependentUpon>FormEnviarMensagem.cs</DependentUpon>
@@ -119,8 +146,8 @@
     <EmbeddedResource Include="FormInicial.resx">
       <DependentUpon>FormInicial.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormPesquisarResponsavel.resx">
-      <DependentUpon>FormPesquisarResponsavel.cs</DependentUpon>
+    <EmbeddedResource Include="FormPesquisar.resx">
+      <DependentUpon>FormPesquisar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
