--- a/EscolaIdiomas/EscolaIdiomas.csproj
+++ b/EscolaIdiomas/EscolaIdiomas.csproj
@@ -112,6 +112,12 @@
     <Compile Include="FormPesquisar.Designer.cs">
       <DependentUpon>FormPesquisar.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormTurma.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormTurma.Designer.cs">
+      <DependentUpon>FormTurma.cs</DependentUpon>
+    </Compile>
     <Compile Include="GerenciadorBanco.cs" />
     <Compile Include="GerenciadorSIEscola.cs" />
     <Compile Include="Program.cs" />
@@ -148,6 +154,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormPesquisar.resx">
       <DependentUpon>FormPesquisar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormTurma.resx">
+      <DependentUpon>FormTurma.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
