--- a/EscolaIdiomas/EscolaIdiomas.csproj
+++ b/EscolaIdiomas/EscolaIdiomas.csproj
@@ -106,11 +106,11 @@
     <Compile Include="FormInicial.Designer.cs">
       <DependentUpon>FormInicial.cs</DependentUpon>
     </Compile>
-    <Compile Include="FormPesquisar.cs">
+    <Compile Include="FormConsultar.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FormPesquisar.Designer.cs">
-      <DependentUpon>FormPesquisar.cs</DependentUpon>
+    <Compile Include="FormConsultar.Designer.cs">
+      <DependentUpon>FormConsultar.cs</DependentUpon>
     </Compile>
     <Compile Include="FormTurma.cs">
       <SubType>Form</SubType>
@@ -152,8 +152,8 @@
     <EmbeddedResource Include="FormInicial.resx">
       <DependentUpon>FormInicial.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FormPesquisar.resx">
-      <DependentUpon>FormPesquisar.cs</DependentUpon>
+    <EmbeddedResource Include="FormConsultar.resx">
+      <DependentUpon>FormConsultar.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormTurma.resx">
       <DependentUpon>FormTurma.cs</DependentUpon>
